// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Classes with state: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Classes with state: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Classes with state: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Classes with state: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Complex class component hoists nodes independently of functional root component: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "React.Fragment",
              "status": "NORMAL",
            },
          ],
          "message": "",
          "name": "Epsilon",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "Tau",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class component hoists nodes independently of functional root component: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "React.Fragment",
              "status": "NORMAL",
            },
          ],
          "message": "",
          "name": "Epsilon",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "Tau",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class component hoists nodes independently of functional root component: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "React.Fragment",
              "status": "NORMAL",
            },
          ],
          "message": "",
          "name": "Epsilon",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "Tau",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class component hoists nodes independently of functional root component: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "React.Fragment",
              "status": "NORMAL",
            },
          ],
          "message": "",
          "name": "Epsilon",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "Tau",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class component rendering equivalent node to functional root component: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Zeta",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Epsilon",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Zeta",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "Tau",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class component rendering equivalent node to functional root component: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Zeta",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Epsilon",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Zeta",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "Tau",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class component rendering equivalent node to functional root component: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Zeta",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Epsilon",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Zeta",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "Tau",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class component rendering equivalent node to functional root component: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 5,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Zeta",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Epsilon",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Zeta",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "Tau",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #2: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #2: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #2: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #2: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #3: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #3: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #3: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #3: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #4: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 12,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #4: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 12,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #4: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 12,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #4: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 12,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #5: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #5: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #5: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component #5: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Complex class components folding into functional root component: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Inheritance chaining: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Inheritance chaining: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Inheritance chaining: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Inheritance chaining: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple classes #2: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes #2: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes #2: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes #2: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes #3: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple classes #3: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple classes #3: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple classes #3: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "NEW_TREE",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple classes with Array.from 2: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 1,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes with Array.from 2: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 1,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes with Array.from 2: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 1,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes with Array.from 2: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 1,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes with Array.from: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 1,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes with Array.from: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 1,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes with Array.from: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 1,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes with Array.from: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 1,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple classes: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "MyComponent",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "MyComponent",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "MyComponent",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "MyComponent",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;
